--- a/src/pages/Home/assets/css/Home.module.css
+++ b/src/pages/Home/assets/css/Home.module.css
@@ -13,6 +13,10 @@
   width: 35%;
 }
 
+.content > *  {
+  margin: 10px 0;
+}
+
 .content p {
   color: #d0d6f9;
   font-weight: 400;
@@ -31,8 +35,9 @@
 }
 
 .content p:last-child {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Barlow";
+  line-height: 28px;
 }
 
 .explore {
