--- a/src/components/UI/Header/assets/css/Header.module.css
+++ b/src/components/UI/Header/assets/css/Header.module.css
@@ -42,6 +42,11 @@
 
 .navbar ul li a:hover {
   height: 100%;
+  border-bottom: 3px solid rgba(255, 255, 255, 0.3);
+}
+
+.navbar ul li a.active {
+  height: 100%;
   border-bottom: 3px solid #fff;
 }
 
@@ -60,3 +65,15 @@
   border-top: 1px solid #fff;
   opacity: 0.25;
 }
+
+@media screen and (max-width: 1200px) {
+  .line {
+    display: none;
+  }
+
+  .navbar ul li a b {
+    display: none;
+  }
+}
+
+
