--- a/src/components/UI/Navbar/assets/css/Navbar.module.css
+++ b/src/components/UI/Navbar/assets/css/Navbar.module.css
@@ -12,7 +12,7 @@
 .navbar ul {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .navbar ul li {
