--- a/src/pages/Destination/assets/css/Destination.module.css
+++ b/src/pages/Destination/assets/css/Destination.module.css
@@ -12,8 +12,6 @@
 .destination-image {
   width: 445px;
   height: 445px;
-  background-repeat: none;
-  background-size: cover;
 }
 
 .pick-destination h2 {
@@ -32,7 +30,6 @@
   flex-direction: column;
   justify-content: space-between;
   margin-left: 20%;
-  
 }
 
 .content-desctiption ul {
@@ -70,11 +67,11 @@
   font-size: 18px;
   font-family: "Barlow", serif;
   color: #d0d6f9;
-   line-height: 32px;
+  line-height: 32px;
 }
 
 .content-desctiption hr {
-  border-top: 2px solid #383B4B;
+  border-top: 2px solid #383b4b;
   border-bottom: transparent;
 }
 
@@ -87,10 +84,9 @@
   flex-direction: column;
 }
 
-
 .destination-travel-info > div p:first-child {
   font-size: 16px;
-  font-family: "Barlow Condensed",sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
 }
 
 .destination-travel-info > div p:last-child {
@@ -100,4 +96,92 @@
 
 .destination-travel-info .travel {
   margin-left: 3rem;
+}
+
+@media screen and (max-width: 992px) {
+  .destination {
+    flex-direction: column;
+    padding: 10vh 5vw;
+  }
+
+  .pick-destination {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pick-destination img {
+    width: 400px;
+    height: 400px;
+    align-self: center;
+  }
+
+  .content-desctiption {
+    align-items: center;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    margin-top: 5vh;
+  }
+
+  .content-desctiption > * {
+    margin: 15px 0;
+  }
+
+  .content-desctiption h1 {
+    font-size: 5em;
+  }
+
+  .content-desctiption p {
+    text-align: center;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .content-desctiption {
+    margin-top: 8vh;
+  }
+  .content-desctiption h1 {
+    font-size: 4em;
+  }
+
+  .pick-destination h2 {
+    font-size: 21px;
+    text-align: center;
+  }
+
+  .pick-destination img {
+    width: 200px;
+    height: 200px;
+  }
+
+  .content-desctiption {
+    margin: 0 10px;
+  }
+
+  .content-desctiption ul {
+    font-size: 16px;
+    z-index: 49;
+  }
+
+  .content-desctiption p {
+    font-size: 14px;
+  }
+
+  .content-desctiption ul li:not(:first-child) {
+    margin-left: 2rem;
+  }
+
+  .destination-travel-info {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .destination-travel-info > * {
+    margin: 15px 0;
+  }
+
+  .destination-travel-info .travel {
+    margin-left: 0;
+  }
 }
