--- a/src/pages/Crew/assets/css/Crew.module.css
+++ b/src/pages/Crew/assets/css/Crew.module.css
@@ -99,6 +99,9 @@
     text-align: center;
     align-items: center;
   }
+  .caurosel {
+    margin-top: 3em;
+  }
   .member-info h2 {
     align-self: flex-start;
     font-size: 20px;
